pre element spacing fix

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -106,6 +106,9 @@ code {
   background: $color-gray-93;
   padding: 0 $baseline-height / 4;
 }
+pre code {
+  padding: 0;
+}
 blockquote {
   margin: $baseline-height;
   padding-left: $baseline-height;
