--- a/style.css
+++ b/style.css
@@ -177,6 +177,10 @@ code {
   padding: 0 0.375em;
 }
 
+pre code {
+  padding: 0;
+}
+
 blockquote {
   margin: 1.5em;
   padding-left: 1.5em;
